--- a/src/index.css
+++ b/src/index.css
@@ -84,13 +84,12 @@ button {
   /* border-radius: 8px; */
   /* border: 1px solid transparent; */
   /* padding: 0.6em 1.2em; */
-  /* font-size: 1em; */
-  /* font-weight: 500; */
   /* font-family: inherit; */
   /* background-color: #1a1a1a; */
   cursor: pointer;
   /* transition: border-color 0.  25s; */
 }
+
 /* button:hover {
   border-color: #646cff;
 } */
@@ -98,6 +97,17 @@ button {
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 } */
+
+.my-button {
+  font-size: 20px;
+  font-weight: 500;
+  padding-inline: 12px;
+  padding-block: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
