--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,7 @@
 
 @utility container {
   margin-inline: auto;
-  padding-inline: 2rem;
-}
-
-img {
-  max-width: 100%;
+  /* padding-inline: 30px; */
 }
 
 :root {
@@ -63,50 +59,6 @@ img {
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  /* border-radius: 8px; */
-  /* border: 1px solid transparent; */
-  /* padding: 0.6em 1.2em; */
-  /* font-family: inherit; */
-  /* background-color: #1a1a1a; */
-  cursor: pointer;
-  /* transition: border-color 0.  25s; */
-}
-
-/* button:hover {
-  border-color: #646cff;
-} */
-/* button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} */
-
-.my-button {
-  font-size: 20px;
-  font-weight: 500;
-  padding-inline: 12px;
-  padding-block: 4px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 4px;
 }
 
 @media (prefers-color-scheme: light) {
@@ -198,4 +150,69 @@ button:focus-visible {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+img {
+  max-width: 100%;
+}
+
+footer a {
+  color: white;
+  transition: color 0.1s linear;
+}
+
+a {
+  /* font-weight: 500; */
+  color: black;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: #67bc5e;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+button {
+  cursor: pointer;
+}
+
+/* button:hover {
+  border-color: #646cff;
+} */
+
+/* button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+} */
+
+.my-button {
+  font-size: 20px;
+  font-weight: 500;
+  padding-inline: 12px;
+  padding-block: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+}
+
+input,
+textarea {
+  padding: 6px 12px;
+  border-radius: 4px;
+  border: solid 1px #b6dab2;
+  box-shadow: inset 0px 0px transparent !important;
+}
+
+input:focus,
+input:focus-visible,
+textarea:focus,
+textarea:focus-visible {
+  outline: none;
+  border: solid 1px #67bc5e;
+  box-shadow: 0px 0px 10px 0px #b6dab2;
 }
