--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 @theme {
   --color-my-black: #233141;
   --color-my-green: #398f30;
+  --color-my-white: #efefef;
 }
 
 @utility container {
@@ -202,19 +203,19 @@ button:focus-visible {
 
 input,
 textarea {
-  padding: 10px 14px;
-  border-radius: 4px;
-  border: solid 1px #b6dab2;
-  transition: box-shadow 0.1s linear;
-  box-shadow: 0px 0px 10px 0px transparent;
+  /* padding: 10px 14px; */
+  /* border-radius: 4px; */
+  /* border: solid 1px #b6dab2; */
+  /* transition: box-shadow 0.1s linear; */
+  /* box-shadow: 0px 0px 10px 0px transparent; */
   /* box-shadow: inset 0px 0px transparent !important; */
 }
 
-input:focus,
+/* input:focus,
 input:focus-visible,
 textarea:focus,
 textarea:focus-visible {
   outline: none;
   border: solid 1px #67bc5e;
-  box-shadow: 0px 0px 10px 0px #b3e6ae;
-}
+  box-shadow: 0px 0px 5px 0px #dbf6d9;
+} */
