--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,13 @@
   --color-my-black: #233141;
   --color-my-green: #398f30;
   --color-my-white: #efefef;
+  --shadow-my-input-shadow: 0 0 9px #6fcd6585;
+}
+
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 9px #6fcd6585, 0 0 0px 1000px white inset;
+  /* -webkit-text-fill-color: #000;  */
+  /* transition: background-color 5000s ease-in-out 0s; */
 }
 
 @utility container {
@@ -44,9 +51,9 @@
   --accent: oklch(0.97 0 0);
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
-  --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
+  --border: oklch(92.191% 0.0001 271.152);
+  --input: oklch(96.079% 0.07179 141.45);
+  --ring: oklch(57.407% 0.15493 141.614 / 0.518);
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
   --chart-3: oklch(0.398 0.07 227.392);
